# qax

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/cargo-qax/: Cargo.toml
crates/cargo-qax/src/: main.rs
crates/qax/: Cargo.toml  build.rs
crates/qax-build/: Cargo.toml
crates/qax-build/src/: i18n.rs  lib.rs  qm.rs  rcc.rs  tools.rs
crates/qax-sys/: Cargo.toml  build.rs
crates/qax-sys/cpp/: shim.cpp  shim.h
crates/qax-sys/src/: lib.rs
crates/qax/examples/: async.rs  counter.rs  custom.rs  dynamic.rs  greet.rs  multiwindow.rs  player.rs  timer.rs  widgets.rs
crates/qax/src/: app.rs  dialog.rs  engine.rs  i18n.rs  lib.rs  model.rs  reactive.rs  ui.rs  value.rs
crates/qax/tests/: async_emitter.rs  churn.rs  diff.rs  grid.rs  icon.rs  mouse.rs  on_close.rs  poke_registry.rs  shell.rs  styled.rs  timer.rs  visible.rs
crates/qax/translations/: qax_ru.qm  qax_ru.ts
