[workspace]
resolver = "2"
members = ["crates/qax-sys", "crates/qax", "crates/qax-build", "crates/cargo-qax"]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/monsler-software/qax"
readme = "README.md"
keywords = ["gui", "qt", "ui"]
categories = ["gui", "api-bindings"]
description = "High level declarative Qt6 bindings for Rust."