[package]
name = "cargo-qax"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/monsler-software/qax"
description = "Cargo subcommand for qax: extract tr!() strings into Qt .ts catalogues and compile .qrc resources."

[[bin]]
name = "cargo-qax"
path = "src/main.rs"

[dependencies]
qax-build = { version = "0.1.4", path = "../qax-build" }
