[package]
name = "qax"
description = "High-level, ergonomic Qt6 bindings for Rust (QML + code-driven components)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["gui", "qt", "ui"]
categories = ["gui", "api-bindings"]
description = "High level declarative Qt6 bindings for Rust."

[dependencies]
qax-sys = { version = "0.1.0", path = "../qax-sys" }
